@startuml
hide circle
hide empty members

class "Client" as sq 
class "Client Account" as ua 
class "Client Chat" as sqc 
class "Project Editor" as sqe 
class "File" as sqf 
class "Global Chat" as gchat 
class "Project Chat" as pchat 
class "Private Chat" as fchat 
class "Server" as sqse

sq -right- sqse : <<TCP>>

sq *-- ua : 1
sq *-- sqc : 1
sq *-- sqe : 0..1

sqc *-- gchat : 1
sqc *-- pchat : 0..1
sqc *-- fchat : 0..*

sqe *-- sqf : 0..*


@enduml